# LineIntegralConvolution

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
demos/: demo-lic.ipynb  demo-lic.py  demo-params.py
playground/: demo-params.py  demo_block_chunking.py  demo_block_extraction.py  demo_effect_of_params.py  demo_lic.py  demo_lmc.py  demo_planck.py  demo_script.py  main-notebook.ipynb  main-script.py  main.ipynb  main.py
src/Vegtamr/: lic.py  utils.py
src/line_integral_convolutions/: fields.py  lic.py  utils.py
src/vegtamr/: fields.py  lic.py  utils.py  vfields.py
src/vegtamr/lic/: _api.py  _core.py  _parallel.py  _parallel_by_block.py  _parallel_by_row.py  _serial.py  example_parallel.py
src/vegtamr/utils/: _postprocess.py  plots.py  vfields.py
tests/: test_block_chunking.py
