[project]
name = "vegtamr"
version = "0.1.0"
description = "vegtamr: a line integral convolution library"
readme = "README.md"
authors = [
  { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.1",
  "rlic>=0.5.1",
  "scikit-image>=0.25.2",
  "scipy>=1.15.2",
]

[dependency-groups]
playground = [
  "astropy>=7.1.0",
  "ipykernel>=6.30.1",
  "ipympl>=0.9.7",
  "jupyterlab>=4.4.6",
  "jupyterlab-lsp>=5.2.0",
  "python-lsp-server>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.pyright]
include = ["src", "playground"]
